// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'acala' -> 'statemint' xcm transfer 'DOT' > xtokens transfer > balance on from chain 1`] = `
{
  "free": 9000000000000,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`'acala' -> 'statemint' xcm transfer 'DOT' > xtokens transfer > balance on to chain 1`] = `
{
  "consumers": 0,
  "data": {
    "feeFrozen": 0,
    "free": 10000000000000,
    "miscFrozen": 0,
    "reserved": 0,
  },
  "nonce": 0,
  "providers": 0,
  "sufficients": 0,
}
`;

exports[`'acala' -> 'statemint' xcm transfer 'DOT' > xtokens transfer > from chain hrmp messages 1`] = `[]`;

exports[`'acala' -> 'statemint' xcm transfer 'DOT' > xtokens transfer > from chain ump messages 1`] = `
[
  {
    "v2": [
      {
        "withdrawAsset": [
          {
            "fun": {
              "fungible": 1000000000000,
            },
            "id": {
              "concrete": {
                "interior": {
                  "here": null,
                },
                "parents": 0,
              },
            },
          },
        ],
      },
      {
        "clearOrigin": null,
      },
      {
        "buyExecution": {
          "fees": {
            "fun": {
              "fungible": 500000000000,
            },
            "id": {
              "concrete": {
                "interior": {
                  "here": null,
                },
                "parents": 0,
              },
            },
          },
          "weightLimit": {
            "unlimited": null,
          },
        },
      },
      {
        "depositReserveAsset": {
          "assets": {
            "wild": {
              "all": null,
            },
          },
          "dest": {
            "interior": {
              "x1": {
                "parachain": 1000,
              },
            },
            "parents": 0,
          },
          "maxAssets": 1,
          "xcm": [
            {
              "buyExecution": {
                "fees": {
                  "fun": {
                    "fungible": 500000000000,
                  },
                  "id": {
                    "concrete": {
                      "interior": {
                        "here": null,
                      },
                      "parents": 1,
                    },
                  },
                },
                "weightLimit": {
                  "unlimited": null,
                },
              },
            },
            {
              "depositAsset": {
                "assets": {
                  "wild": {
                    "all": null,
                  },
                },
                "beneficiary": {
                  "interior": {
                    "x1": {
                      "accountId32": {
                        "id": "0x88dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee",
                        "network": {
                          "any": null,
                        },
                      },
                    },
                  },
                  "parents": 0,
                },
                "maxAssets": 1,
              },
            },
          ],
        },
      },
    ],
  },
]
`;

exports[`'acala' -> 'statemint' xcm transfer 'DOT' > xtokens transfer > to chain xcmpQueue events 1`] = `[]`;

exports[`'acala' -> 'statemint' xcm transfer 'DOT' > xtokens transfer > tx events 1`] = `
[
  {
    "data": {
      "assets": [
        {
          "fun": {
            "Fungible": 1000000000000,
          },
          "id": {
            "Concrete": {
              "interior": "Here",
              "parents": 1,
            },
          },
        },
      ],
      "dest": {
        "interior": {
          "X2": [
            {
              "Parachain": 1000,
            },
            {
              "AccountId32": {
                "id": "(hash)",
                "network": "Any",
              },
            },
          ],
        },
        "parents": 1,
      },
      "fee": {
        "fun": {
          "Fungible": 1000000000000,
        },
        "id": {
          "Concrete": {
            "interior": "Here",
            "parents": 1,
          },
        },
      },
      "sender": "23y3WetbNi6rDMgHmyRDjgpb7PnhgPotuPPawxruTMLYTLzG",
    },
    "method": "TransferredMultiAssets",
    "section": "xTokens",
  },
]
`;

exports[`'statemint' -> 'acala' xcm transfer 'DOT' > xcmPallet transfer > balance on from chain 1`] = `
{
  "consumers": 0,
  "data": {
    "feeFrozen": 0,
    "free": "(rounded 10000000000000)",
    "miscFrozen": 0,
    "reserved": 0,
  },
  "nonce": 1,
  "providers": 0,
  "sufficients": 0,
}
`;

exports[`'statemint' -> 'acala' xcm transfer 'DOT' > xcmPallet transfer > balance on to chain 1`] = `
{
  "free": 10000000000000,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`'statemint' -> 'acala' xcm transfer 'DOT' > xcmPallet transfer > from chain hrmp messages 1`] = `[]`;

exports[`'statemint' -> 'acala' xcm transfer 'DOT' > xcmPallet transfer > to chain xcmpQueue events 1`] = `[]`;

exports[`'statemint' -> 'acala' xcm transfer 'DOT' > xcmPallet transfer > tx events 1`] = `
[
  {
    "data": [
      {
        "Incomplete": [
          "(rounded 650000000)",
          "FailedToTransactAsset",
        ],
      },
    ],
    "method": "Attempted",
    "section": "polkadotXcm",
  },
]
`;
